<resources>
    <string name="app_name">CS-458 Covid form application</string>
    <string name="title">Covid-19 Vaccine Survey</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="city">City</string>
    <string name="gender">Choose Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>
    <string name="vaccine_type">Vaccine Type</string>
    <string name="side_effects">Experienced Side Effects</string>
    <string name="verification">I have entered correct information.</string>
    <string name="submit">Submit</string>
</resources>